--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,9 +3,9 @@
   <head>
     <title>Burger Homework</title>
 
-    <link rel="icon" href="assets/img/burger.gif">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/burger_style.css">
+	<link rel="icon" href="assets/img/burger.gif">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="text/css" href="assets/css/burger_style.css">
 
   </head>
 
@@ -14,7 +14,7 @@
     <div class="container-fluid">
     <center>
       <div class="row">
-      <img src="assets/img/burgerimg.png" alt="Burger Img">
+	<img src="assets/img/burgerimg.png" alt="Burger Img">
     <div class="jumbotron">
     <h1>Burger Homework</h1>      
     <p>Choose a Burger from the list. Then devour it. <br> 
